Added Global Error Handling on response processing. This gets the server setup and running in a sample app that doesn't really do anything yet other than complain that it does not know how to resolve files. Added a simple ui to sample app to start/stop the server

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
 	<string name="app_name">Foxy Server Sample App</string>
+	<string name="title_activity_main">MainActivity</string>
+
+	<string name="hello_world">Welcome to the FoxyServer... Go ahead and turn me on... I bet I\'ll like it!</string>
+	<string name="action_settings">Settings</string>
 </resources>
